--- a/openApiDocs/v1.0/Identity.Partner.yml
+++ b/openApiDocs/v1.0/Identity.Partner.yml
@@ -11,7 +11,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminCustomer
       summary: List delegatedAdminCustomers
-      description: Get a list of the delegatedAdminCustomer objects and their properties.
+      description: Get a list of the delegatedAdminCustomer objects and their properties. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/tenantrelationship-list-delegatedadmincustomers?view=graph-rest-1.0
@@ -103,7 +103,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminCustomer
       summary: Get delegatedAdminCustomer
-      description: Read the properties of a delegatedAdminCustomer object.
+      description: Read the properties of a delegatedAdminCustomer object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadmincustomer-get?view=graph-rest-1.0
@@ -217,7 +217,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminCustomer
       summary: List serviceManagementDetails
-      description: Get a list of the delegatedAdminServiceManagementDetail objects and their properties.
+      description: Get a list of the delegatedAdminServiceManagementDetail objects and their properties. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadmincustomer-list-servicemanagementdetails?view=graph-rest-1.0
@@ -493,7 +493,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: List delegatedAdminRelationships
-      description: Get a list of the delegatedAdminRelationship objects and their properties.
+      description: Get a list of the delegatedAdminRelationship objects and their properties. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/tenantrelationship-list-delegatedadminrelationships?view=graph-rest-1.0
@@ -587,7 +587,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Create delegatedAdminRelationship
-      description: Create a new delegatedAdminRelationship object.
+      description: Create a new delegatedAdminRelationship object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/tenantrelationship-post-delegatedadminrelationships?view=graph-rest-1.0
@@ -614,7 +614,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Get delegatedAdminRelationship
-      description: Read the properties of a delegatedAdminRelationship object.
+      description: Read the properties of a delegatedAdminRelationship object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-get?view=graph-rest-1.0
@@ -681,7 +681,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Update delegatedAdminRelationship
-      description: Update the properties of a delegatedAdminRelationship object. A relationship can only be updated if it's in the created status.
+      description: Update the properties of a delegatedAdminRelationship object. A relationship can only be updated if it's in the created status. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-update?view=graph-rest-1.0
@@ -716,7 +716,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Delete delegatedAdminRelationship
-      description: 'Delete a delegatedAdminRelationship object. A relationship can only be deleted if it''s in the ''created'' status. '
+      description: Delete a delegatedAdminRelationship object. A relationship can only be deleted if it's in the 'created' status.  This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-delete?view=graph-rest-1.0
@@ -747,7 +747,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: List accessAssignments
-      description: Get a list of the delegatedAdminAccessAssignment objects and their properties.
+      description: Get a list of the delegatedAdminAccessAssignment objects and their properties. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-list-accessassignments?view=graph-rest-1.0
@@ -831,7 +831,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Create accessAssignments
-      description: Create a new delegatedAdminAccessAssignment object.
+      description: Create a new delegatedAdminAccessAssignment object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-post-accessassignments?view=graph-rest-1.0
@@ -867,7 +867,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Get delegatedAdminAccessAssignment
-      description: Read the properties of a delegatedAdminAccessAssignment object.
+      description: Read the properties of a delegatedAdminAccessAssignment object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminaccessassignment-get?view=graph-rest-1.0
@@ -932,7 +932,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Update delegatedAdminAccessAssignment
-      description: Update the properties of a delegatedAdminAccessAssignment object.
+      description: Update the properties of a delegatedAdminAccessAssignment object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminaccessassignment-update?view=graph-rest-1.0
@@ -975,7 +975,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Delete delegatedAdminAccessAssignment
-      description: Delete a delegatedAdminAccessAssignment object.
+      description: Delete a delegatedAdminAccessAssignment object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminaccessassignment-delete?view=graph-rest-1.0
@@ -1036,7 +1036,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: List operations
-      description: Get a list of the delegatedAdminRelationshipOperation objects and their properties.
+      description: Get a list of the delegatedAdminRelationshipOperation objects and their properties. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-list-operations?view=graph-rest-1.0
@@ -1152,7 +1152,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Get delegatedAdminRelationshipOperation
-      description: Read the properties of a delegatedAdminRelationshipOperation object.
+      description: Read the properties of a delegatedAdminRelationshipOperation object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationshipoperation-get?view=graph-rest-1.0
@@ -1313,7 +1313,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: List requests
-      description: Get a list of the delegatedAdminRelationshipRequest objects and their properties.
+      description: Get a list of the delegatedAdminRelationshipRequest objects and their properties. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-list-requests?view=graph-rest-1.0
@@ -1394,7 +1394,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Create requests
-      description: Create a new delegatedAdminRelationshipRequest object.
+      description: Create a new delegatedAdminRelationshipRequest object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-post-requests?view=graph-rest-1.0
@@ -1430,7 +1430,7 @@ paths:
       tags:
         - tenantRelationships.delegatedAdminRelationship
       summary: Get delegatedAdminRelationshipRequest
-      description: Read the properties and relationships of a delegatedAdminRelationshipRequest object.
+      description: Read the properties and relationships of a delegatedAdminRelationshipRequest object. This API is available in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/delegatedadminrelationshiprequest-get?view=graph-rest-1.0
@@ -1866,6 +1866,7 @@ components:
         - approve
         - terminate
         - unknownFutureValue
+        - reject
       type: string
     microsoft.graph.delegatedAdminRelationshipRequestStatus:
       title: delegatedAdminRelationshipRequestStatus
