--- a/openApiDocs/beta/DeviceManagement.Functions.yml
+++ b/openApiDocs/beta/DeviceManagement.Functions.yml
@@ -2058,6 +2058,31 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: function
+  '/deviceManagement/virtualEndpoint/cloudPCs/{cloudPC-id}/microsoft.graph.getFrontlineCloudPcAccessState()':
+    get:
+      tags:
+        - deviceManagement.Functions
+      summary: Invoke function getFrontlineCloudPcAccessState
+      operationId: deviceManagement.virtualEndpoint.cloudPC_getFrontlineCloudPcAccessState
+      parameters:
+        - name: cloudPC-id
+          in: path
+          description: The unique identifier of cloudPC
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: cloudPC
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.frontlineCloudPcAccessState'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: function
   '/deviceManagement/virtualEndpoint/cloudPCs/{cloudPC-id}/microsoft.graph.getShiftWorkCloudPcAccessState()':
     get:
       tags:
@@ -2082,6 +2107,12 @@ paths:
                 $ref: '#/components/schemas/microsoft.graph.shiftWorkCloudPcAccessState'
         default:
           $ref: '#/components/responses/error'
+      deprecated: true
+      x-ms-deprecation:
+        removalDate: '2023-12-31T00:00:00.0000000+00:00'
+        date: '2023-09-05T00:00:00.0000000+00:00'
+        version: 2023-08/getShiftWorkCloudPcAccessState
+        description: 'The getShiftWorkCloudPcAccessState API is deprecated and will stop returning data on Dec 31, 2023. Please use the new getFrontlineCloudPcAccessState API'
       x-ms-docs-operation-type: function
   '/deviceManagement/virtualEndpoint/cloudPCs/{cloudPC-id}/microsoft.graph.getSupportedCloudPcRemoteActions()':
     get:
@@ -3658,6 +3689,17 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.frontlineCloudPcAccessState:
+      title: frontlineCloudPcAccessState
+      enum:
+        - unassigned
+        - noLicensesAvailable
+        - activationFailed
+        - active
+        - activating
+        - standbyMode
+        - unknownFutureValue
+      type: string
     microsoft.graph.shiftWorkCloudPcAccessState:
       title: shiftWorkCloudPcAccessState
       enum:
@@ -3666,7 +3708,6 @@ components:
         - activationFailed
         - active
         - activating
-        - waitlisted
         - unknownFutureValue
         - standbyMode
       type: string
@@ -4333,7 +4374,7 @@ components:
           maximum: 2147483647
           minimum: -2147483648
           type: integer
-          description: 'The number value of the impact. For the aggregation types of count and affectedCloudPcCount, the value indicates the number of affected instances. For example, 6 affectedCloudPcCount means that 6 Cloud PCs are affected. For the aggregation types of percentage and affectedCloudPcPercentage, the value indicates the percent of affected instances. For example, 12 affectedCloudPcPercentage means that 12% of Cloud PCs are affected.'
+          description: 'The number value of the impact. For the aggregation types of count and affectedCloudPcCount, the value indicates the number of affected instances. For example, 6 affectedCloudPcCount means that six Cloud PCs are affected. For the aggregation types of percentage and affectedCloudPcPercentage, the value indicates the percent of affected instances. For example, 12 affectedCloudPcPercentage means that 12% of Cloud PCs are affected.'
           format: int32
           nullable: true
       additionalProperties:
@@ -4510,6 +4551,9 @@ components:
       title: cloudPcPartnerAgentInstallResult
       type: object
       properties:
+        errorMessage:
+          type: string
+          nullable: true
         installStatus:
           $ref: '#/components/schemas/microsoft.graph.cloudPcPartnerAgentInstallStatus'
         isThirdPartyPartner:
