--- a/openApiDocs/v1.0/Search.yml
+++ b/openApiDocs/v1.0/Search.yml
@@ -75,7 +75,7 @@ paths:
       tags:
         - external.externalConnection
       summary: List externalConnections
-      description: Get a list of the externalConnection objects and their properties.
+      description: Get a list of the externalConnection objects and their properties. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-list?view=graph-rest-1.0
@@ -162,7 +162,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Create externalConnection
-      description: Create a new externalConnection object.
+      description: Create a new externalConnection object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-external-post-connections?view=graph-rest-1.0
@@ -189,7 +189,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Get externalConnection
-      description: Read the properties and relationships of an externalConnection object.
+      description: Read the properties and relationships of an externalConnection object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-get?view=graph-rest-1.0
@@ -255,7 +255,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Update externalConnection
-      description: Update the properties of an externalConnection object.
+      description: Update the properties of an externalConnection object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-update?view=graph-rest-1.0
@@ -290,7 +290,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Delete externalConnection
-      description: Deletes an externalConnection object.
+      description: Deletes an externalConnection object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-delete?view=graph-rest-1.0
@@ -321,7 +321,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Get externalGroup
-      description: Get an externalGroup object.
+      description: Get an externalGroup object. This API is supported in the following national cloud deployments.
       operationId: external.connection_ListGroup
       parameters:
         - name: externalConnection-id
@@ -395,7 +395,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Create externalGroup
-      description: Create a new externalGroup object.
+      description: Create a new externalGroup object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-post-groups?view=graph-rest-1.0
@@ -431,7 +431,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Get externalGroup
-      description: Get an externalGroup object.
+      description: Get an externalGroup object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalgroup-get?view=graph-rest-1.0
@@ -495,7 +495,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Update externalGroup
-      description: Update the properties of an externalGroup object.
+      description: Update the properties of an externalGroup object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalgroup-update?view=graph-rest-1.0
@@ -538,7 +538,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Delete externalGroup
-      description: Delete an externalGroup object.
+      description: Delete an externalGroup object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalgroup-delete?view=graph-rest-1.0
@@ -654,7 +654,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Create identity
-      description: Create an identity resource for a new member in an externalGroup.
+      description: Create an identity resource for a new member in an externalGroup. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalgroup-post-members?view=graph-rest-1.0
@@ -811,7 +811,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Delete identity
-      description: Delete an identity resource to remove the corresponding member from an externalGroup.
+      description: Delete an identity resource to remove the corresponding member from an externalGroup. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-identity-delete?view=graph-rest-1.0
@@ -910,7 +910,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Get externalItem
-      description: Read the properties and relationships of an externalItem object.
+      description: Read the properties and relationships of an externalItem object. This API is supported in the following national cloud deployments.
       operationId: external.connection_ListItem
       parameters:
         - name: externalConnection-id
@@ -1019,7 +1019,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Get externalItem
-      description: Read the properties and relationships of an externalItem object.
+      description: Read the properties and relationships of an externalItem object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalitem-get?view=graph-rest-1.0
@@ -1123,7 +1123,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Delete externalItem
-      description: Delete an externalItem object.
+      description: Delete an externalItem object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-externalitem-delete?view=graph-rest-1.0
@@ -1623,7 +1623,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Get connectionOperation
-      description: Read the properties and relationships of a connectionOperation object.
+      description: Read the properties and relationships of a connectionOperation object. This API is supported in the following national cloud deployments.
       operationId: external.connection_ListOperation
       parameters:
         - name: externalConnection-id
@@ -1727,7 +1727,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Get connectionOperation
-      description: Read the properties and relationships of a connectionOperation object.
+      description: Read the properties and relationships of a connectionOperation object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-connectionoperation-get?view=graph-rest-1.0
@@ -1885,7 +1885,7 @@ paths:
       tags:
         - external.externalConnection
       summary: Get schema
-      description: Read the properties and relationships of a schema object.
+      description: Read the properties and relationships of a schema object. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/externalconnectors-schema-get?view=graph-rest-1.0
@@ -1963,32 +1963,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/microsoft.graph.externalConnectors.schema'
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
-    delete:
-      tags:
-        - external.externalConnection
-      summary: Delete navigation property schema for external
-      operationId: external.connection_DeleteSchema
-      parameters:
-        - name: externalConnection-id
-          in: path
-          description: The unique identifier of externalConnection
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: externalConnection
-        - name: If-Match
-          in: header
-          description: ETag
-          style: simple
-          schema:
-            type: string
-      responses:
-        2XX:
-          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -2074,7 +2048,7 @@ paths:
       tags:
         - search.Actions
       summary: Invoke action query
-      description: Runs the query specified in the request body. Search results are provided in the response.
+      description: Runs the query specified in the request body. Search results are provided in the response. This API is supported in the following national cloud deployments.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/search-query?view=graph-rest-1.0
@@ -2450,7 +2424,7 @@ components:
           $ref: '#/components/schemas/microsoft.graph.externalConnectors.aclType'
         value:
           type: string
-          description: 'The unique identifer of the identity. In case of Azure Active Directory identities, value is set to the object identifier of the user, group or tenant for types user, group and everyone (and everyoneExceptGuests) respectively. In case of external groups value is set to the ID of the externalGroup'
+          description: 'The unique identifer of the identity. For Azure Active Directory identities, value is set to the object identifier of the user, group or tenant for types user, group and everyone (and everyoneExceptGuests) respectively. For external groups value is set to the ID of the externalGroup'
       additionalProperties:
         type: object
     microsoft.graph.externalConnectors.externalItemContent:
@@ -2522,7 +2496,7 @@ components:
           items:
             type: string
             nullable: true
-          description: 'A set of aliases or a friendly names for the property. Maximum 32 characters. Only alphanumeric characters allowed. For example, each string may not contain control characters, whitespace, or any of the following: :, ;, ,, (, ), [, ], {, }, %, $, +, !, *, =, &, ?, @, #, /, ~, '', '', <, >, `, ^. Optional.'
+          description: 'A set of aliases or a friendly name for the property. Maximum 32 characters. Only alphanumeric characters allowed. For example, each string may not contain control characters, whitespace, or any of the following: :, ;, ,, (, ), [, ], {, }, %, $, +, !, *, =, &, ?, @, #, /, ~, '', '', <, >, `, ^. Optional.'
         isQueryable:
           type: boolean
           description: Specifies if the property is queryable. Queryable properties can be used in Keyword Query Language (KQL) queries. Optional.
@@ -2537,13 +2511,13 @@ components:
           nullable: true
         isSearchable:
           type: boolean
-          description: Specifies if the property is searchable. Only properties of type String or StringCollection can be searchable. Non-searchable properties are not added to the search index. Optional.
+          description: Specifies if the property is searchable. Only properties of type String or StringCollection can be searchable. Nonsearchable properties aren't added to the search index. Optional.
           nullable: true
         labels:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.externalConnectors.label'
-          description: 'Specifies one or more well-known tags added against a property. Labels help Microsoft Search understand the semantics of the data in the connection. Adding appropriate labels would result in an enhanced search experience (e.g. better relevance). The possible values are: title, url, createdBy, lastModifiedBy, authors, createdDateTime, lastModifiedDateTime, fileName, fileExtension, iconUrl, unknownFutureValue. Optional.'
+          description: 'Specifies one or more well-known tags added against a property. Labels help Microsoft Search understand the semantics of the data in the connection. Adding appropriate labels would result in an enhanced search experience (for example, better relevance). The possible values are: title, url, createdBy, lastModifiedBy, authors, createdDateTime, lastModifiedDateTime, fileName, fileExtension, iconUrl, unknownFutureValue. Optional.'
         name:
           type: string
           description: 'The name of the property. Maximum 32 characters. Only alphanumeric characters allowed. For example, each string may not contain control characters, whitespace, or any of the following: :, ;, ,, (, ), [, ], {, }, %, $, +, !, *, =, &, ?, @, #, /, ~, '', '', <, >, `, ^.  Required.'
@@ -2564,7 +2538,7 @@ components:
           maximum: 2147483647
           minimum: -2147483648
           type: integer
-          description: The number of searchBucket resources to be returned. This is not required when the range is provided manually in the search request. Optional.
+          description: The number of searchBucket resources to be returned. This isn't required when the range is provided manually in the search request. Optional.
           format: int32
           nullable: true
       additionalProperties:
@@ -2622,11 +2596,11 @@ components:
       properties:
         enableModification:
           type: boolean
-          description: 'Indicates whether spelling modifications are enabled. If enabled, the user will get the search results for the corrected query in case of no results for the original query with typos. The response will also include the spelling modification information in the queryAlterationResponse property. Optional.'
+          description: 'Indicates whether spelling modifications are enabled. If enabled, the user gets the search results for the corrected query if there were no results for the original query with typos. The response will also include the spelling modification information in the queryAlterationResponse property. Optional.'
           nullable: true
         enableSuggestion:
           type: boolean
-          description: 'Indicates whether spelling suggestions are enabled. If enabled, the user will get the search results for the original search query and suggestions for spelling correction in the queryAlterationResponse property of the response for the typos in the query. Optional.'
+          description: 'Indicates whether spelling suggestions are enabled. If enabled, the user gets the search results for the original search query and suggestions for spelling correction in the queryAlterationResponse property of the response for the typos in the query. Optional.'
           nullable: true
       additionalProperties:
         type: object
@@ -2682,7 +2656,7 @@ components:
           maximum: 2147483647
           minimum: -2147483648
           type: integer
-          description: 'The total number of results. Note this is not the number of results on the page, but the total number of results satisfying the query.'
+          description: 'The total number of results. Note this isn''t the number of results on the page, but the total number of results satisfying the query.'
           format: int32
           nullable: true
       additionalProperties:
@@ -2911,6 +2885,7 @@ components:
         - fileName
         - fileExtension
         - unknownFutureValue
+        - iconUrl
       type: string
     microsoft.graph.externalConnectors.propertyType:
       title: propertyType
